crates/oxc_react_compiler/tests/snapshots/await-side-effecting-promise.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/await-side-effecting-promise.js
---
import { c as _c } from "react/compiler-runtime";
async function Component(props) {
	const $ = _c(2);
	let x;
	if ($[0] !== props.id) {
		x = [];
		await populateData(props.id, x);
		$[0] = props.id;
		$[1] = x;
	} else {
		x = $[1];
	}
	return x;
}
