crates/oxc_react_compiler/tests/snapshots/await.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/await.js
---
import { c as _c } from "react/compiler-runtime";
async function Component(props) {
	const $ = _c(4);
	let t0;
	if ($[0] !== props.id) {
		t0 = await load(props.id);
		$[0] = props.id;
		$[1] = t0;
	} else {
		t0 = $[1];
	}
	const user = t0;
	let t1;
	if ($[2] !== user.name) {
		t1 = <div>{user.name}</div>;
		$[2] = user.name;
		$[3] = t1;
	} else {
		t1 = $[3];
	}
	return t1;
}
