crates/oxc_react_compiler/tests/snapshots/babel-existing-react-import.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/babel-existing-react-import.js
---
import { c as _c } from "react/compiler-runtime";
import { useState, useMemo } from "react";
function Component(props) {
	const $ = _c(4);
	const [x] = useState(0);
	let t0;
	if ($[0] !== x) {
		t0 = calculateExpensiveNumber(x);
		$[0] = x;
		$[1] = t0;
	} else {
		t0 = $[1];
	}
	const expensiveNumber = t0;
	let t1;
	if ($[2] !== expensiveNumber) {
		t1 = <div>{expensiveNumber}</div>;
		$[2] = expensiveNumber;
		$[3] = t1;
	} else {
		t1 = $[3];
	}
	return t1;
}
function Component2(props) {
	const $ = _c(4);
	const [x] = useState(0);
	let t0;
	if ($[0] !== x) {
		t0 = calculateExpensiveNumber(x);
		$[0] = x;
		$[1] = t0;
	} else {
		t0 = $[1];
	}
	const expensiveNumber = t0;
	let t1;
	if ($[2] !== expensiveNumber) {
		t1 = <div>{expensiveNumber}</div>;
		$[2] = expensiveNumber;
		$[3] = t1;
	} else {
		t1 = $[3];
	}
	return t1;
}
