crates/oxc_react_compiler/tests/snapshots/bigint-literal.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/bigint-literal.js
---
import { c as _c } from "react/compiler-runtime";
function Component(props) {
	const $ = _c(1);
	const isZero = 0n ? "yes" : "no";
	const isOne = 1n ? "yes" : "no";
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = <div>{String(1n)}{String(100n)}{String(0n)}{String(31n)}{"Value is 10"}{isZero}{isOne}{true ? "equal" : "not-equal"}</div>;
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	return t0;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{}]
};
