crates/oxc_react_compiler/tests/snapshots/bigint-object-keys.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/bigint-object-keys.js
---
import { c as _c } from "react/compiler-runtime";
function component(value) {
	const $ = _c(2);
	let t0;
	if ($[0] !== value) {
		t0 = {
			"1": value,
			"16": value,
			"8": value,
			"2": value,
			"9007199254740993": value
		};
		$[0] = value;
		$[1] = t0;
	} else {
		t0 = $[1];
	}
	return t0;
}
