crates/oxc_react_compiler/tests/snapshots/block-scoping-switch-dead-code.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/block-scoping-switch-dead-code.js
---
function useHook(a, b) {
	bb0: switch (a) {
		case 1: {
			if (b == null) {
				return;
			}
			console.log(b);
			break bb0;
		}
		case 2: {
			return;
		}
		default: {
			return;
		}
	}
}
export const FIXTURE_ENTRYPOINT = {
	fn: useHook,
	params: [1, "foo"]
};
